--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -14,10 +14,10 @@
             <script>
                 var dsqjs = new DisqusJS({
                     shortname: 'aozaki-note',
-                    siteName: 'Aozaki Note',
-                    identifier: 'document.location.origin + document.location.pathname + document.location.search',
-                    url: 'document.location.origin + document.location.pathname + document.location.search',
-                    title: 'document.title',
+                    siteName: '',
+                    identifier: '',
+                    url: '',
+                    title: '',
                     api: 'https://disqus.skk.moe/disqus/',
                     apikey: '15uS5PY4o48PFojnWMfAwjyvIrgK2RFR6WxtsFhPF3gtURkxNHgaXzfK7dqQYv6p',
                     admin: 'kuro_aozaki',
