DisqusJS to own API

--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -18,7 +18,7 @@
                     identifier: '',
                     url: '',
                     title: '',
-                    api: 'https://disqus.skk.moe/disqus/',
+                    api: 'https://disqus.aozaki-kuro.com/api/',
                     apikey: '15uS5PY4o48PFojnWMfAwjyvIrgK2RFR6WxtsFhPF3gtURkxNHgaXzfK7dqQYv6p',
                     admin: 'kuro_aozaki',
                     adminLabel: '☄'
