--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -10,6 +10,14 @@
     margin-right: auto;
 }
 
+.single {
+    .content {
+        figure {
+            margin: 0rem;
+        }
+    }
+}
+
 //.lazyautosizes{
 //    padding-top: 15px;
 //}
