--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -138,6 +138,8 @@
               serverURL: '{{ $waline.serverURL }}',
               visitor: '{{ $waline.visitor }}',
               dark: '{{ $waline.dark }}',
+              requiredMeta: '{{ $waline.requiredMeta }}',
+              uploadImage: '{{ $waline.uploadImage }}',
             });
             </script>
             <noscript>
