--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -138,6 +138,7 @@
               serverURL: '{{ $waline.serverURL }}',
               visitor: '{{ $waline.visitor }}',
               dark: '{{ $waline.dark }}',
+              requiredFields: '{{ $waline.requiredFields }}',
             });
             </script>
             <noscript>
