--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -18,10 +18,10 @@
     }
 }
 
-.page {
-    width: 35%;
-    min-width:50rem;
-}
+//.page {
+//    width: 30%;
+//    //min-width:50rem;
+//}
 
 //.lazyautosizes{
 //    padding-top: 15px;
