new light navbar

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -25,15 +25,10 @@
 
 #header-desktop {
   [theme='light'] & {
-    background: rgba(245, 245, 245, 0.92);
-    -webkit-backdrop-filter: blur(12px);
-    backdrop-filter: blur(12px);
-  }
-
-  [theme='white'] & {
-    background: rgba(245, 245, 245, 0.92);
-    -webkit-backdrop-filter: blur(12px);
-    backdrop-filter: blur(12px);
+    background-color: hsla(0, 0%, 100%, 0.65);
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+    border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   }
 
   [theme='dark'] & {
@@ -62,10 +57,18 @@
   bottom: 0pt;
 }
 
+.search .search-toggle {
+  left: .6rem;
+}
+
+.open .search .search-button, .search.mobile .search-button {
+  left: .4rem
+}
+
 #header-desktop {
   line-height: 0rem;
 }
 
 #header-mobile {
-    line-height: 0rem;
+  line-height: 0rem;
 }
