--- a/assets/css/navbar.scss
+++ b/assets/css/navbar.scss
@@ -69,9 +69,9 @@
 * 修改 SVG 图标定位
 */
 
-header .header-title-post {
+.navbar-svg {
   padding-left: unset;
-  margin: -0.4rem;
+  margin-left: -0.4rem;
 }
 
 /**
