enable comments for about.me

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -22,9 +22,9 @@
   }
 }
 
-/**
-*   限制页面宽度
-*/
+// ==============================
+// 限制页面宽度
+// ==============================
 
 .page {
   width: 60%;
