--- a/assets/css/search.scss
+++ b/assets/css/search.scss
@@ -1,6 +1,6 @@
-/**
-*   去除搜索底框背景色
-*/
+// ==============================
+// 去除搜索底框背景色
+// ==============================
 
 .search .input {
   [theme='light'] & {
@@ -11,10 +11,10 @@
   }
 }
 
-/**
-  *   因使用 SVG 标题
-  *   重新对搜索标志进行定位
-  */
+// ==============================
+// 因使用 SVG 标题
+// 重新对搜索标志进行定位
+// ==============================
 
 .search .search-button {
   top: 1pt;
