move css to main_custom.scss

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -6,6 +6,7 @@
 @import 'navbar.scss';
 @import 'search.scss';
 @import 'title.scss';
+@import 'logo.scss';
 
 .twitter-tweet {
   padding-top: 15px;
